Fixed Spacing
Forgot to add padding in the "info" section

--- a/styles.css
+++ b/styles.css
@@ -110,11 +110,13 @@ img{
     flex: 1;
     flex-direction: column;
     align-items: center;
+    padding: 20px 350px;
 }
 
 .cards{
     display: flex;
     flex-direction: column;
+    padding-bottom: 50px;
 }
 
 .quote{
